// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaxonomyColumnConfiguration component should render column "common_name": common_name 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "hosts": hosts 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/37299"
  >
    37299
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/10239"
    title="Viruses, taxon ID 10239"
    translate="no"
  >
    Viruses
  </a>
   &gt; 
  <a
    href="/taxonomy/2559587"
    title="Riboviria, taxon ID 2559587"
    translate="no"
  >
    Riboviria
  </a>
   &gt; 
  <a
    href="/taxonomy/2732396"
    title="Orthornavirae, taxon ID 2732396"
    translate="no"
  >
    Orthornavirae
  </a>
   &gt; 
  <a
    href="/taxonomy/2732408"
    title="Pisuviricota, taxon ID 2732408"
    translate="no"
  >
    Pisuviricota
  </a>
   &gt; 
  <a
    href="/taxonomy/2732506"
    title="Pisoniviricetes, taxon ID 2732506"
    translate="no"
  >
    Pisoniviricetes
  </a>
   &gt; 
  <a
    href="/taxonomy/464095"
    title="Picornavirales, taxon ID 464095"
    translate="no"
  >
    Picornavirales
  </a>
   &gt; 
  <a
    href="/taxonomy/11974"
    title="Caliciviridae, taxon ID 11974"
    translate="no"
  >
    Caliciviridae
  </a>
   &gt; 
  <a
    href="/taxonomy/95337"
    title="Vesivirus, taxon ID 95337"
    translate="no"
  >
    Vesivirus
  </a>
   &gt; 
  <a
    href="/taxonomy/35612"
    title="Vesicular exanthema of swine virus (VESV), taxon ID 35612"
    translate="no"
  >
    Vesicular exanthema of swine virus (VESV)
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "links": links 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&amp;id=37299"
        rel="noopener"
        target="_blank"
      >
        www.ncbi.nlm.nih.gov
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "mnemonic": mnemonic 1`] = `
<DocumentFragment>
  VESV
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "other_names": other_names 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "parent": parent 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/35612"
  >
    VESV
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "rank": rank 1`] = `
<DocumentFragment>
  no rank
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "reviewed": reviewed 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "scientific_name": scientific_name 1`] = `
<DocumentFragment>
  Primate calicivirus
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28taxonomy_id%3A37299%29"
      >
        3 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28taxonomy_id%3A37299%29+AND+%28reviewed%3Afalse%29"
      >
        3 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "strains": strains 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "synonyms": synonyms 1`] = `<DocumentFragment />`;
